# Handeye_Calib

./: CMakeLists.txt  README.md  package.xml  setup.py
cfg/: handeye_param.cfg
data/trial1/: target_points.npy
data/trial1/poses/: board2camera_matrix.npy  ee2base_matrix.npy  ee2base_matrix_back.npy  ee2base_pose.xlsx  ee2base_pose_back.xlsx
data/trial2/poses/: board2camera_matrix.npy  ee2base_matrix.npy  ee2base_pose.xlsx
src/: back_prop.py  datasampler.py  estimate_chessboard.py  goat-biaoding.py  hand_eye_tf_publisher.py  modified_tsai_method.py  save_transformations.py  step1_get_target_points.py  step2_take_samples.py  step3_get_target_orientation.py  step4.py  take_samples_chessboard.py  temp_script.py
src/config_files/: trial1.json  trial2.json
